--- a/examples/fancy/config.ini
+++ b/examples/fancy/config.ini
@@ -11,16 +11,16 @@
 name = Planet Schmanet
 link = http://planet.schmanet.janet/
 owner_name = Janet Weiss
-owner_email = janet@slut.sex
+owner_email = janet@slut.walk
 
 # cache_directory: Where cached feeds are stored
 # new_feed_items: Number of items to take from new feeds
 # log_level: One of DEBUG, INFO, WARNING, ERROR or CRITICAL
 # feed_timeout: number of seconds to wait for any given feed
 cache_directory = examples/cache
-new_feed_items = 2
+new_feed_items = 20
 log_level = DEBUG
-feed_timeout = 20
+feed_timeout = 30
 
 # template_files: Space-separated list of output template files
 template_files = examples/fancy/index.html.tmpl examples/atom.xml.tmpl examples/rss20.xml.tmpl examples/rss10.xml.tmpl examples/opml.xml.tmpl examples/foafroll.xml.tmpl
@@ -38,7 +38,7 @@ template_files = examples/fancy/index.html.tmpl examples/atom.xml.tmpl examples/
 #         system. You can specify more locales separated by ':', planet will
 #         use the first available one
 output_dir = examples/output
-items_per_page = 60
+items_per_page = 200
 days_per_page = 0
 date_format = %B %d, %Y %I:%M %p
 new_date_format = %B %d, %Y
@@ -82,25 +82,9 @@ faceheight = 85
 # "natively" knows about.  Look at fancy-examples/index.html.tmpl
 # for the flip-side of this.
 
-[http://www.netsplit.com/blog/index.rss]
-name = Scott James Remnant
-face = keybuk.png
-# pick up the default facewidth and faceheight
+[http://static.scripting.com/rss.xml]
+name = Dave Winer
 
-[http://www.gnome.org/~jdub/blog/?flav=rss]
-name = Jeff Waugh
-face = jdub.png
-facewidth = 70
-faceheight = 74
+[http://decafbad.com/blog/rss.xml]
+name = Les Orchard
 
-[http://usefulinc.com/edd/blog/rss91]
-name = Edd Dumbill
-face = edd.png
-facewidth = 62
-faceheight = 80
-
-[http://blog.clearairturbulence.org/?flav=rss]
-name = Thom May
-face = thom.png
-# pick up the default faceheight only
-facewidth = 59
